--- a/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/usergroupEdit.xhtml
@@ -41,7 +41,7 @@
                                         'detail':'#{msgs.youWillBeRedirected}',
                                         'severity':'info'});"
                                      update="notifications"/>
-                    <p:button value="#{msgs.abbrechen}" outcome="users"
+                    <p:button value="#{msgs.abbrechen}" outcome="users.jsf?id=1"
                               icon="fa fa-times fa-lg" iconPos="right" styleClass="secondary-button"/>
                 </p:panel>
 
