--- a/Kitodo/src/main/webapp/pages/processEdit.xhtml
+++ b/Kitodo/src/main/webapp/pages/processEdit.xhtml
@@ -26,8 +26,8 @@
             <h:form id="processEditForm">
                 <p:panel styleClass="content-header">
                     <h3>
-                        <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{ProzessverwaltungForm.process.id ne 0}"/>
-                        <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{ProzessverwaltungForm.process.id eq 0}"/>
+                        <h:outputText value="#{msgs.prozessBearbeiten} (#{ProzessverwaltungForm.process.title})" rendered="#{ProzessverwaltungForm.processId ne 0}"/>
+                        <h:outputText value="#{msgs.einenNeuenProzessAnlegen}" rendered="#{ProzessverwaltungForm.processId eq 0}"/>
                     </h3>
                     <p:commandButton value="#{msgs.speichern}"
                                      action="#{ProzessverwaltungForm.saveAndRedirect}"
