Adding "editCurrentTaks.xhtml" in the new Frontend frame

--- a/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/schritt_box_Action.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/schritt_box_Action.xhtml
@@ -78,7 +78,7 @@
                        class="eingabeBoxen" style="margin-top:20px">
                     <tr>
                         <td class="eingabeBoxen_row1">
-                            <h:outputText value="#{msgs.moeglicheAktionen}"/>
+                            <h4>#{msgs.moeglicheAktionen}</h4>
                         </td>
                     </tr>
                     <tr>
