--- a/Kitodo/src/main/webapp/pages/clients.xhtml
+++ b/Kitodo/src/main/webapp/pages/clients.xhtml
@@ -37,7 +37,7 @@
                     <h:outputText value="#{item.name}"/>
                 </p:column>
                 <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
-                    <h:link outcome="clientEdit" title="#{msgs.benutzerBearbeiten}">
+                    <h:link outcome="clientEdit" title="#{msgs.clientEdit}">
                         <f:param name="id" value="#{item.id}"/>
                         <i class="fa fa-pencil-square-o fa-lg"/>
                     </h:link>
