--- a/Kitodo/src/main/webapp/pages/inc/tbl_Navigation.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc/tbl_Navigation.xhtml
@@ -105,7 +105,7 @@
                                 </h:link>
 
                                 <!-- Prozessübersicht -->
-                                <sec:authorize access="hasAuthority('admin')">
+                                <sec:authorize access="hasAuthority('admin_GLOBAL')">
                                     <h:commandLink styleClass="mlink" id="allProcesses"
                                                    rendered="#{(LoginForm.maximaleBerechtigung == 1) || (LoginForm.maximaleBerechtigung == 2)}"
                                                    action="#{ProzessverwaltungForm.filterCurrentProcesses}"
@@ -156,7 +156,7 @@
                         </sec:authorize>
 
                         <!-- ################            Administration              ######################-->
-                        <sec:authorize access="hasAuthority('admin')">
+                        <sec:authorize access="hasAuthority('admin_GLOBAL')">
                             <h:panelGroup>
                                 <h:outputText styleClass="th_menu"
                                               value="- #{msgs.administration} -"/>
